--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -44,7 +44,7 @@ services:
       - "traefik.http.routers.tkd.service=api@internal"
       # BasicAuth
       - "traefik.http.middlewares.tkd-basicauth.basicauth.users=${TRAEFIK_BASIC_AUTH}"
-#      - "traefik.http.routers.tkd.middlewares=tkd-basicauth@docker"
+      - "traefik.http.routers.tkd.middlewares=tkd-basicauth@docker"
       # NEW: public router just for the manifest (no auth)
       - "traefik.http.routers.tkd-manifest.rule=Host(`${TRAEFIK_DOMAIN}`) && Path(`/dashboard/manifest.json`)"
       - "traefik.http.routers.tkd-manifest.entrypoints=websecure"
