--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,4 +14,6 @@ server {
     expires 7d;
     add_header Cache-Control "public, max-age=604800, immutable";
   }
+
+  location = /env.js { add_header Cache-Control "no-store"; }
 }
