--- a/.github/workflows/vm_init.yml
+++ b/.github/workflows/vm_init.yml
@@ -23,10 +23,10 @@ jobs:
   initialize_vm:
     runs-on: ubuntu-latest
     env:
-      # Prefer explicit inputs, else the repo variables you already set (HOST/USER)
       TARGET_HOST: ${{ github.event.inputs.droplet_ip || github.event.inputs.host || vars.HOST }}
       TARGET_USER: ${{ github.event.inputs.user || vars.USER }}
       TARGET_IPV6: ${{ github.event.inputs.droplet_ipv6 }}
+
     steps:
       - name: Echo inputs (sanity)
         run: |
@@ -34,123 +34,149 @@ jobs:
           echo "IP6=${{ env.TARGET_IPV6 }}"
           echo "HOST=${{ env.TARGET_HOST }}"
           echo "USER=${{ env.TARGET_USER }}"
+          test -n "${{ env.TARGET_HOST }}" || { echo "❌ TARGET_HOST is empty"; exit 1; }
+          test -n "${{ env.TARGET_USER }}" || { echo "❌ TARGET_USER is empty"; exit 1; }
 
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Ensure Docker & docker-rollout (idempotent)
-        run: |
-          set -Eeuo pipefail
-          
-          have() { command -v "$1" >/dev/null 2>&1; }
-          
-          echo "🔎 Checking Docker…"
-          if have docker; then
-            echo "✅ Docker already installed: $(docker --version)"
-          else
-            echo "⬇️ Installing Docker via get.docker.com…"
-            for i in {1..3}; do
-              curl -fsSL https://get.docker.com -o get-docker.sh && break || sleep 2
-            done
-            sh get-docker.sh
-            docker --version
-          fi
-          
-          echo "🔧 Ensuring Docker service is enabled & running…"
-          if ! systemctl is-enabled --quiet docker; then
-            sudo systemctl enable docker
-          fi
-          if ! systemctl is-active --quiet docker; then
-            sudo systemctl start docker
-          fi
-          sudo systemctl status docker --no-pager -l | sed -n '1,5p'
-          
-          echo "🔎 Checking docker-rollout CLI plugin…"
-          # docker CLI plugins live under ~/.docker/cli-plugins/docker-<name>
-          PLUGDIR="${HOME}/.docker/cli-plugins"
-          PLUGPATH="${PLUGDIR}/docker-rollout"
-          if docker rollout --help >/dev/null 2>&1; then
-            echo "✅ docker-rollout already available via Docker CLI"
-            ls -l "$PLUGPATH" || true
-          else
-            echo "⬇️ Installing docker-rollout plugin…"
-            mkdir -p "$PLUGDIR"
-            RVER="v0.13"
-            if curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/${RVER}/docker-rollout" \
-                 -o "$PLUGPATH"; then
-              echo "docker-rollout: pinned ${RVER}"
-            else
-              echo "docker-rollout: falling back to main"
-              curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/main/docker-rollout" \
-                -o "$PLUGPATH"
-            fi
-            chmod +x "$PLUGPATH"
-            # Validate through Docker’s plugin dispatcher (not by executing the script directly)
-            docker rollout --help >/dev/null
-            echo "✅ docker-rollout installed at ${PLUGPATH}"
-          fi
-          
-          echo "🔎 Current Docker info:"
-          docker info --format '{{.ServerVersion}} (storage driver: {{.Driver}})' || true
-
-      - name: Ensure user has docker group access (optional)
-        env:
-          TARGET_USER: ${{ env.TARGET_USER }}
-        run: |
-          set -Eeuo pipefail
-          if [[ -n "${TARGET_USER:-}" && "${TARGET_USER}" != "root" ]]; then
-            sudo groupadd -f docker
-            if id -nG "${TARGET_USER}" | tr ' ' '\n' | grep -qx docker; then
-              echo "✅ ${TARGET_USER} already in docker group"
-            else
-              echo "➕ Adding ${TARGET_USER} to docker group"
-              sudo usermod -aG docker "${TARGET_USER}"
-              echo "ℹ️  ${TARGET_USER} must re-login (or reboot) for group change to take effect."
-            fi
-          else
-            echo "ℹ️  Skipping docker group update (user is root or not set)."
-          fi
-
-      - name: Give user ability to run docker and restart Docker
+      # Everything from here happens ON THE VM over SSH
+      - name: Install Docker, Compose v2, docker-rollout on remote (idempotent)
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ vars.HOST }}
-          username: ${{ vars.USER }}
+          host: ${{ env.TARGET_HOST }}
+          username: ${{ env.TARGET_USER }}
           key: ${{ secrets.SSH_KEY }}
+          script_stop: true
           script: |
-            sudo usermod -aG docker $USER
+            set -Eeuo pipefail
+
+            have() { command -v "$1" >/dev/null 2>&1; }
+
+            echo "🔎 Detecting distro..."
+            if [ -f /etc/os-release ]; then
+              . /etc/os-release
+              DISTRO="${ID:-unknown}"
+            else
+              DISTRO="unknown"
+            fi
+            echo "Distro: $DISTRO"
+
+            echo "🔧 Ensuring curl, ca-certificates"
+            if have apt-get; then
+              sudo apt-get update -y
+              sudo DEBIAN_FRONTEND=noninteractive apt-get install -y curl ca-certificates
+            elif have dnf; then
+              sudo dnf install -y curl ca-certificates
+            elif have yum; then
+              sudo yum install -y curl ca-certificates
+            fi
+
+            echo "🐳 Installing Docker Engine (idempotent)"
+            if have docker; then
+              echo "✅ Docker present: $(docker --version)"
+            else
+              # Use the official convenience script (works on Ubuntu/Debian most reliably)
+              curl -fsSL https://get.docker.com -o get-docker.sh
+              sh get-docker.sh
+              echo "✅ Docker installed: $(docker --version)"
+            fi
+
+            echo "🔧 Enabling & starting docker service if systemd available"
             if command -v systemctl >/dev/null 2>&1; then
-              sudo systemctl restart docker
-            elif command -v service >/dev/null 2>&1; then
-              sudo service docker restart
-            elif [ -f /etc/init.d/docker ]; then
-              sudo /etc/init.d/docker restart
+              sudo systemctl enable docker || true
+              sudo systemctl restart docker || sudo systemctl start docker || true
+              sudo systemctl --no-pager -l status docker | sed -n '1,8p' || true
             else
-              echo "Unable to restart Docker. Please restart it manually."
-              exit 1
+              # SysV / other init fallbacks
+              if command -v service >/dev/null 2>&1; then
+                sudo service docker restart || sudo service docker start || true
+              elif [ -x /etc/init.d/docker ]; then
+                sudo /etc/init.d/docker restart || sudo /etc/init.d/docker start || true
+              else
+                echo "⚠️  Could not control docker service (no systemctl/service/init.d). Continuing."
+              fi
             fi
 
-      - name: Validate Docker and Docker Compose Installation
+            echo "🧩 Ensuring docker 'compose' plugin (v2)"
+            if docker compose version >/dev/null 2>&1; then
+              echo "✅ docker compose present: $(docker compose version)"
+            else
+              if have apt-get; then
+                sudo apt-get update -y
+                # docker-compose-plugin provides 'docker compose'
+                sudo DEBIAN_FRONTEND=noninteractive apt-get install -y docker-compose-plugin
+              fi
+              if ! docker compose version >/dev/null 2>&1; then
+                echo "⚠️  docker compose plugin not found via package manager; installing static binary"
+                VER="v2.29.7"
+                sudo mkdir -p /usr/local/lib/docker/cli-plugins
+                sudo curl -fsSL "https://github.com/docker/compose/releases/download/${VER}/docker-compose-$(uname -s)-$(uname -m)" \
+                  -o /usr/local/lib/docker/cli-plugins/docker-compose
+                sudo chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
+              fi
+              docker compose version
+            fi
+
+            echo "🔌 Ensuring docker-rollout CLI plugin"
+            PLUGDIR="${HOME}/.docker/cli-plugins"
+            PLUGPATH="${PLUGDIR}/docker-rollout"
+            mkdir -p "$PLUGDIR"
+            if docker rollout --help >/dev/null 2>&1; then
+              echo "✅ docker-rollout already available"
+            else
+              RVER="v0.13"
+              if curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/${RVER}/docker-rollout" -o "$PLUGPATH"; then
+                echo "docker-rollout pinned ${RVER}"
+              else
+                echo "fallback to main"
+                curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/main/docker-rollout" -o "$PLUGPATH"
+              fi
+              chmod +x "$PLUGPATH"
+              docker rollout --help >/dev/null
+              echo "✅ docker-rollout installed at ${PLUGPATH}"
+            fi
+
+            echo "👥 Ensuring 'docker' group exists"
+            if getent group docker >/dev/null 2>&1; then
+              echo "✅ group 'docker' exists"
+            else
+              sudo groupadd docker
+              echo "➕ created group 'docker'"
+            fi
+
+            echo "👤 Managing user membership in 'docker' group"
+            CURRENT_USER="$(id -un)"
+            # If you connected as root, there's no need to add root to docker group.
+            if [ "$CURRENT_USER" != "root" ]; then
+              if id -nG "$CURRENT_USER" | tr ' ' '\n' | grep -qx docker; then
+                echo "✅ $CURRENT_USER already in docker group"
+              else
+                sudo usermod -aG docker "$CURRENT_USER"
+                echo "➕ Added $CURRENT_USER to docker group (re-login required for new shell sessions)."
+              fi
+            else
+              echo "ℹ️  Running as root; skipping docker group membership."
+            fi
+
+            echo "🔎 Docker info summary:"
+            docker info --format '{{.ServerVersion}} (Driver: {{.Driver}}), Root: {{.DockerRootDir}}' || true
+
+      - name: Validate Docker and Docker Compose on remote
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ vars.HOST }}
-          username: ${{ vars.USER }}
+          host: ${{ env.TARGET_HOST }}
+          username: ${{ env.TARGET_USER }}
           key: ${{ secrets.SSH_KEY }}
+          script_stop: true
           script: |
-            # Validate Docker installation
-            if ! command -v docker &> /dev/null; then
-              echo "Docker is not installed or not in PATH"
-              exit 1
+            set -Eeuo pipefail
+            command -v docker >/dev/null 2>&1 || { echo "❌ docker missing"; exit 1; }
+            command -v docker >/dev/null 2>&1 && docker --version
+            docker compose version || { echo '❌ docker compose missing'; exit 1; }
+            echo "✅ Docker & Compose are ready on $(hostname)"
+            # Confirm service is running when systemd is present
+            if command -v systemctl >/dev/null 2>&1; then
+              systemctl is-active --quiet docker && echo "✅ docker service is active" || (echo "❌ docker service not active"; systemctl --no-pager -l status docker; exit 1)
             fi
-            docker_version=$(docker --version)
-            echo "Docker version: $docker_version"
-
-            # Validate Docker Compose installation
-            if ! command -v docker compose &> /dev/null; then
-              echo "Docker Compose is not installed or not in PATH"
-              exit 1
-            fi
-            compose_version=$(docker compose --version)
-            echo "Docker Compose version: $compose_version"
-
-            echo "Docker and docker compose have been installed. Server is ready to use 🎉🥳"
+            echo "Server is ready to use 🎉"
