--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -407,38 +407,48 @@ jobs:
             docker compose \
               --env-file /etc/platform/env --env-file ./.env.runtime \
               --profile "${{ env.INFRA_PROFILE }}" pull
+
             docker compose \
               --env-file /etc/platform/env --env-file ./.env.runtime \
-              --profile "${{ env.INFRA_PROFILE }}" up -d
+              --profile "${{ env.INFRA_PROFILE }}" up -d --wait
             
             # --- Rollout APP profile services ---
+            # Make both profiles visible so depends_on entries exist:
+            export COMPOSE_PROFILES="infra,app"
+            
             if docker rollout --help >/dev/null 2>&1; then
               echo "Using docker-rollout for app services"
             
-              docker rollout -f docker-compose.yml --env-file /etc/platform/env --env-file ./.env.runtime \
-                --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 30'" api
+              docker rollout -f docker-compose.yml \
+                --env-file /etc/platform/env --env-file ./.env.runtime \
+                --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 30'" \
+                api
             
-              docker rollout -f docker-compose.yml --env-file /etc/platform/env --env-file ./.env.runtime \
-                --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 20'" web
-            
-              if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
-                docker rollout -f docker-compose.yml --env-file /etc/platform/env --env-file ./.env.runtime background
-              fi
+              docker rollout -f docker-compose.yml \
+                --env-file /etc/platform/env --env-file ./.env.runtime \
+                --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 20'" \
+                web
             else
               echo "docker-rollout not found; using docker compose fallback for app profile"
             
-              docker compose --env-file /etc/platform/env --env-file ./.env.runtime \
-                --profile "${{ env.APP_PROFILE }}" pull
+              # Make sure both profiles are enabled for parsing, but only bring up app services:
+              COMPOSE_PROFILES="infra,app" docker compose \
+                --env-file /etc/platform/env --env-file ./.env.runtime \
+                pull
             
-              docker compose --env-file /etc/platform/env --env-file ./.env.runtime \
-                --profile "${{ env.APP_PROFILE }}" up -d api
+              COMPOSE_PROFILES="infra,app" docker compose \
+                --env-file /etc/platform/env --env-file ./.env.runtime \
+                up -d api
             
-              docker compose --env-file /etc/platform/env --env-file ./.env.runtime \
-                --profile "${{ env.APP_PROFILE }}" up -d web
+              COMPOSE_PROFILES="infra,app" docker compose \
+                --env-file /etc/platform/env --env-file ./.env.runtime \
+                up -d web
             
               # Optional background
               if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
-                docker compose --env-file /etc/platform/env --env-file ./.env.runtime up -d background
+                COMPOSE_PROFILES="infra,app" docker compose \
+                  --env-file /etc/platform/env --env-file ./.env.runtime \
+                  up -d background
               fi
             fi 
             
