--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -138,8 +138,7 @@ services:
     image: ghcr.io/logto-io/logto:1.31
     restart: always
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     entrypoint: ["sh", "-c", "./packages/cli/custom-setup/entrypoint.sh"]
     environment:
       - TRUST_PROXY_HEADER=1
@@ -226,12 +225,9 @@ services:
     image: ghcr.io/bartekus/platform/api:${IMAGE_TAG:-latest}
     restart: always
     depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      traefik:
-        condition: service_started
+      - db
+      - redis
+      - traefik
     env_file:
       - /etc/platform/env
     environment:
@@ -286,8 +282,7 @@ services:
     image: ghcr.io/bartekus/platform/web:${IMAGE_TAG:-latest}
     restart: always
     depends_on:
-      api:
-        condition: service_healthy
+      - api
     env_file:
       - /etc/platform/env
     environment:
