Fix logot health endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -187,7 +187,8 @@ services:
       - "traefik.http.routers.logto-admin.service=logto-admin"
       - "traefik.http.services.logto-admin.loadbalancer.server.port=3002"
     healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://localhost:3001/api/health || exit 1" ]
+      # Return 0 only if we get HTTP 204
+      test: [ "CMD-SHELL", "apk add --no-cache curl >/dev/null 2>&1 || true; code=$(curl -fsS -o /dev/null -w '%{http_code}' http://127.0.0.1:3001/api/status || echo x); [ \"$code\" = \"204\" ]" ]
       interval: 10s
       timeout: 5s
       retries: 20
